--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 <body>
 
-  <div class="spinner"></div>
+  <!--div class="spinner"></div-->
+    
   <a href="Boletim 31-05.pdf">Visit W3Schools</a>
 
 </body>
